# voicechat

./: Cargo.toml  README.md  config.env.example  rules.conf.example  voicechat-toggle.desktop  voicechat.service
AIPlans/: voicechat-client-plan.md
src/: bus.rs  capture.rs  clean.rs  clock.rs  keywatch.rs  main.rs  paste.rs  rules.rs  state.rs  stt.rs
